tests/ui/consts/miri_unleashed/mutable_references_err.32bit.stderr
error: encountered mutable pointer in final value of constant
  --> $DIR/mutable_references_err.rs:17:1
   |
LL | const MUH: Meh = Meh {
   | ^^^^^^^^^^^^^^

error: encountered mutable pointer in final value of constant
  --> $DIR/mutable_references_err.rs:27:1
   |
LL | const SNEAKY: &dyn Sync = &Synced { x: UnsafeCell::new(42) };
   | ^^^^^^^^^^^^^^^^^^^^^^^

error[E0080]: it is undefined behavior to use this value
  --> $DIR/mutable_references_err.rs:32:1
   |
LL | const SUBTLE: &mut i32 = unsafe { &mut FOO };
   | ^^^^^^^^^^^^^^^^^^^^^^ constructing invalid value: encountered mutable reference in a `const` or `static`
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 4, align: 4) {
               ╾ALLOC0╼                                     │ ╾──╼
           }

error: encountered mutable pointer in final value of constant
  --> $DIR/mutable_references_err.rs:35:1
   |
LL | const BLUNT: &mut i32 = &mut 42;
   | ^^^^^^^^^^^^^^^^^^^^^

error[E0080]: it is undefined behavior to use this value
  --> $DIR/mutable_references_err.rs:40:1
   |
LL | static mut MUT_TO_READONLY: &mut i32 = unsafe { &mut *(&READONLY as *const _ as *mut _) };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ constructing invalid value: encountered mutable reference or box pointing to read-only memory
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 4, align: 4) {
               ╾ALLOC1<imm>╼                                     │ ╾──╼
           }

error[E0080]: it is undefined behavior to use this value
  --> $DIR/mutable_references_err.rs:47:1
   |
LL | const POINTS_TO_MUTABLE1: &i32 = unsafe { &MUTABLE };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ constructing invalid value: encountered reference to mutable memory in `const`
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 4, align: 4) {
               ╾ALLOC2<imm>╼                                     │ ╾──╼
           }

note: erroneous constant encountered
  --> $DIR/mutable_references_err.rs:49:34
   |
LL | const READS_FROM_MUTABLE: i32 = *POINTS_TO_MUTABLE1;
   |                                  ^^^^^^^^^^^^^^^^^^

error[E0080]: evaluation of constant value failed
  --> $DIR/mutable_references_err.rs:51:43
   |
LL | const POINTS_TO_MUTABLE2: &i32 = unsafe { &*MUTABLE_REF };
   |                                           ^^^^^^^^^^^^^ constant accesses mutable global memory

error: encountered mutable pointer in final value of constant
  --> $DIR/mutable_references_err.rs:55:1
   |
LL | const POINTS_TO_MUTABLE_INNER: *const i32 = &mut 42 as *mut _ as *const _;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: encountered mutable pointer in final value of constant
  --> $DIR/mutable_references_err.rs:57:1
   |
LL | const POINTS_TO_MUTABLE_INNER2: *const i32 = &mut 42 as *const _;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: encountered mutable pointer in final value of constant
  --> $DIR/mutable_references_err.rs:59:1
   |
LL | const INTERIOR_MUTABLE_BEHIND_RAW: *mut i32 = &UnsafeCell::new(42) as *const _ as *mut _;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: encountered mutable pointer in final value of constant
  --> $DIR/mutable_references_err.rs:69:1
   |
LL | const RAW_SYNC: SyncPtr<AtomicI32> = SyncPtr { x: &AtomicI32::new(42) };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: encountered mutable pointer in final value of constant
  --> $DIR/mutable_references_err.rs:71:1
   |
LL | const RAW_MUT_CAST: SyncPtr<i32> = SyncPtr { x : &mut 42 as *mut _ as *const _ };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: encountered mutable pointer in final value of constant
  --> $DIR/mutable_references_err.rs:73:1
   |
LL | const RAW_MUT_COERCE: SyncPtr<i32> = SyncPtr { x: &mut 0 };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: skipping const checks
   |
help: skipping check that does not even have a feature gate
  --> $DIR/mutable_references_err.rs:18:8
   |
LL |     x: &UnsafeCell::new(42),
   |        ^^^^^^^^^^^^^^^^^^^^
help: skipping check that does not even have a feature gate
  --> $DIR/mutable_references_err.rs:27:27
   |
LL | const SNEAKY: &dyn Sync = &Synced { x: UnsafeCell::new(42) };
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/mutable_references_err.rs:32:40
   |
LL | const SUBTLE: &mut i32 = unsafe { &mut FOO };
   |                                        ^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/mutable_references_err.rs:32:40
   |
LL | const SUBTLE: &mut i32 = unsafe { &mut FOO };
   |                                        ^^^
help: skipping check that does not even have a feature gate
  --> $DIR/mutable_references_err.rs:32:35
   |
LL | const SUBTLE: &mut i32 = unsafe { &mut FOO };
   |                                   ^^^^^^^^
help: skipping check that does not even have a feature gate
  --> $DIR/mutable_references_err.rs:35:25
   |
LL | const BLUNT: &mut i32 = &mut 42;
   |                         ^^^^^^^
help: skipping check for `const_mut_refs` feature
  --> $DIR/mutable_references_err.rs:40:49
   |
LL | static mut MUT_TO_READONLY: &mut i32 = unsafe { &mut *(&READONLY as *const _ as *mut _) };
   |                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: skipping check for `const_mut_refs` feature
  --> $DIR/mutable_references_err.rs:40:49
   |
LL | static mut MUT_TO_READONLY: &mut i32 = unsafe { &mut *(&READONLY as *const _ as *mut _) };
   |                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/mutable_references_err.rs:47:44
   |
LL | const POINTS_TO_MUTABLE1: &i32 = unsafe { &MUTABLE };
   |                                            ^^^^^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/mutable_references_err.rs:47:44
   |
LL | const POINTS_TO_MUTABLE1: &i32 = unsafe { &MUTABLE };
   |                                            ^^^^^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/mutable_references_err.rs:51:45
   |
LL | const POINTS_TO_MUTABLE2: &i32 = unsafe { &*MUTABLE_REF };
   |                                             ^^^^^^^^^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/mutable_references_err.rs:51:45
   |
LL | const POINTS_TO_MUTABLE2: &i32 = unsafe { &*MUTABLE_REF };
   |                                             ^^^^^^^^^^^
help: skipping check that does not even have a feature gate
  --> $DIR/mutable_references_err.rs:55:45
   |
LL | const POINTS_TO_MUTABLE_INNER: *const i32 = &mut 42 as *mut _ as *const _;
   |                                             ^^^^^^^
help: skipping check that does not even have a feature gate
  --> $DIR/mutable_references_err.rs:57:46
   |
LL | const POINTS_TO_MUTABLE_INNER2: *const i32 = &mut 42 as *const _;
   |                                              ^^^^^^^
help: skipping check that does not even have a feature gate
  --> $DIR/mutable_references_err.rs:59:47
   |
LL | const INTERIOR_MUTABLE_BEHIND_RAW: *mut i32 = &UnsafeCell::new(42) as *const _ as *mut _;
   |                                               ^^^^^^^^^^^^^^^^^^^^
help: skipping check that does not even have a feature gate
  --> $DIR/mutable_references_err.rs:69:51
   |
LL | const RAW_SYNC: SyncPtr<AtomicI32> = SyncPtr { x: &AtomicI32::new(42) };
   |                                                   ^^^^^^^^^^^^^^^^^^^
help: skipping check that does not even have a feature gate
  --> $DIR/mutable_references_err.rs:71:50
   |
LL | const RAW_MUT_CAST: SyncPtr<i32> = SyncPtr { x : &mut 42 as *mut _ as *const _ };
   |                                                  ^^^^^^^
help: skipping check that does not even have a feature gate
  --> $DIR/mutable_references_err.rs:73:51
   |
LL | const RAW_MUT_COERCE: SyncPtr<i32> = SyncPtr { x: &mut 0 };
   |                                                   ^^^^^^

error: aborting due to 13 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
